# grasp-auto-annotation

./: .gitignore  README.md  requirements.txt
auto_annotation/: annotation_utils.py  gen_pickle_dexmodel.py  generate_object_grasp_label_v1.py  generate_object_grasp_label_v2.py  load_grasp.py  main.py  options.py
example/: object_name_list.txt
example/ocrtoc/grasp_label/: large_marker_labels.npz
example/ocrtoc/models/large_marker/: textured.ply
sdf-gen/: CMakeLists.txt  LICENSE.txt  README.md
sdf-gen/scripts/: sdf_tools
sdf-gen/src/: LICENSE.txt  array1.h  array2.h  array3.h  config.h  config.h.in  hashgrid.h  hashtable.h  main.cpp  makelevelset3.cpp  makelevelset3.h  util.h  vec.h
